@@ -1,5 +1,7 @@
 Changelog for Miosix np embedded OS
 
+- File abstraction layer: Addded support for stateless and stateful
+  device files, added DeviceFileGenerator to support stateful devices.
 - File abstraction layer: TerminalDevice is now instantiated in the FDT
 - File abstraction layer: Merged NullFile and NullConsoleDevice classes.
 - File abstraction layer: DeviceFile now implements a default version of
